Use fixed header height to avoid a Cumulative Layout Shift (CLS)

--- a/src/pages/portfolio/projects/project.module.scss
+++ b/src/pages/portfolio/projects/project.module.scss
@@ -2,10 +2,12 @@
 @import "~theme/screens";
 
 .logoContainer {
-    padding-block: 50px;
+    height: 160px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     .logo {
-        margin: 0 auto;
         width: 250px;
     }
 }
